terraform/security.tf
# Security Group
resource "aws_security_group" "minecraft_sg" {
  name        = var.sg_name
  description = "Security group for Minecraft Server"

  # SSH access from anywhere: I believe this is neccesary for ansible to work, although dangerous
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "SSH access"
  }

  # Minecraft server port
  ingress {
    from_port   = 25565
    to_port     = 25565
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Minecraft server port"
  }

  # Allow all outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Minecraft-Server-SG"
  }
}
